--- a/baiso1.html
+++ b/baiso1.html
@@ -7,8 +7,8 @@
 </head>
 <body>
     <center>
-        <img src="./background.png" alt="background" style="width: 100%;" height="200px">
-        <img src="./avatar.png" alt="avatar" style="width: 200px;" height="200px">
+        <img src="./assets/background1.jpg" alt="background" style="width: 100%;" height="200px">
+        <img src="./assets/avatar1.jpg" alt="avatar" style="width: 200px;" height="200px">
         <h1>Nguyễn Văn A</h1>
         <p>Xin chào, tôi là <b>Nguyễn Văn A</b> một lập trình viên web</p>
         <table border="1" style="width: 80%;">
