--- a/baiso1.html
+++ b/baiso1.html
@@ -3,17 +3,22 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="./stylebaiso1.css">
     <title>baiso1</title>
 </head>
 <body>
-    <center>
-        <img src="./assets/background1.jpg" alt="background" style="width: 100%;" height="200px">
-        <img src="./assets/avatar1.jpg" alt="avatar" style="width: 200px;" height="200px">
+        <div class="container">
+            <img id="background" src="./assets/background1.jpg" alt="background" >
+            <img id="avatar" src="./assets/avatar1.jpg" alt="avatar">
+        </div>
+
         <h1>Nguyễn Văn A</h1>
+
         <p>Xin chào, tôi là <b>Nguyễn Văn A</b> một lập trình viên web</p>
-        <table border="1" style="width: 80%;">
+
+        <table>
             <tr>
-                <th style="width: 50%;">Sở thích</th>
+                <th id="c1">Sở thích</th>
                 <th>Kỹ năng</th>
             </tr>
             <tr>
@@ -31,10 +36,7 @@
                         <li>SQL & PHP</li>
                     </ol>
                 </td>
-
             </tr>
         </table>
-    </center>
-
 </body>
 </html>
