--- a/baiso3.html
+++ b/baiso3.html
@@ -3,12 +3,13 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="./stylebaiso3.css">
     <title>baiso3</title>
 </head>
 <body>
-    <center>
         <h1>DANH SÁCH SINH VIÊN</h1>
-        <table border="1" style="width: 60%;">
+
+        <table>
             <tr>
                 <th>STT</th>
                 <th>Họ và tên</th>
@@ -31,9 +32,8 @@
                 <td>9.0</td>
             </tr>
             <tr>
-                <td colspan="5" align="center">Tổng số sinh viên: 2</td>
+                <td colspan="5" >Tổng số sinh viên: 2</td>
             </tr>
         </table>
-    </center>
 </body>
 </html>
